# djangocon-eu-2021-conference-talk

./: DjangoCon EU 2021 Talk.md  README.md
reactor/: pyproject.toml
reactor/project/: asgi.py  settings.py  urls.py
reactor/todo/: live.py  views.py
reactor/todo/migrations/: 0001_initial.py
reactor/todo/templates/todo/: index.html  x-todo.html
sockpuppet/: package-lock.json  package.json  pyproject.toml
sockpuppet/project/: settings.py  urls.py
sockpuppet/todo/migrations/: 0001_initial.py
sockpuppet/todo/reflexes/: todo_reflex.py
sockpuppet/todo/templates/: todo.html
sockpuppet/todo/views/: todo.py
unicorn/: pyproject.toml
unicorn/project/: settings.py  urls.py
unicorn/todo/: apps.py  models.py
unicorn/todo/templates/todo/: index.html
unicorn/unicorn/components/: todo.py
unicorn/unicorn/templates/unicorn/: todo.html
vuejs/: README.md  package.json  pyproject.toml
vuejs/backend/: urls.py  wsgi.py
vuejs/backend/api/: apps.py  models.py  views.py
vuejs/backend/api/migrations/: 0001_initial.py
vuejs/backend/settings/: dev.py
vuejs/public/: index.html
vuejs/src/: main.js  router.js
vuejs/src/components/: Todos.vue
vuejs/src/services/: api.js  todoService.js
vuejs/src/store/: index.js
vuejs/src/store/modules/: todos.js
