[tool.poetry]
name = "sockpuppet"
version = "0.1.0"
description = ""
authors = ["Adam Hill <github@adamghill.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.3"
django-sockpuppet = {extras = ["lxml"], version = "^0.6.0"}

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
black = "^21.5b1"

[tool.poe.tasks]
m = "./manage.py"
r = "./manage.py runserver 0:8002"
ma = "./manage.py makemigrations"
mi = "./manage.py migrate"
md = ["ma", "mi"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
